syntax="proto3";
package proto;
option go_package = "core/proto;proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

service Connector {
  rpc Run(google.protobuf.Empty) returns(google.protobuf.Empty) {}
}

message Message {
  map<string,string> header = 1;
  Body body = 2;
}

message Body {
  oneof payload {
    TriggerRequest trigger = 1;
    EmbeddingRequest embedding = 2;
  }
}

message TriggerRequest {
  int64 id = 1;
  map<string,string>  params = 2;
}

message EmbeddingRequest {
  int64 id = 1;
  int64 document_id = 2;
  string key = 3;
  string content = 4;
}

message TriggerResponse {
  string document_id = 1;
  string url = 2;
  string content = 4;
  Status  status = 5;
  string signature = 6;
}

enum Status {
  SUCCESS = 0;
  FAILED = 1;
}
enum ResponseStep {
  NO_ACTION = 0;
  LOAD = 1;
  EMBEDDING = 2;
  FINISH = 3;

}
message ConnectorStepResponse {
  int64 id = 1;
  int64 document_id = 2;
  ResponseStep step = 3;
  string content = 4;
}